# youtube-sub

./: .gitignore  README.md  install.sh  pyproject.toml
skill/: SKILL.md
tests/: test_srt.py  test_translator.py  test_workspace.py
