[project]
name = "youtube-sub"
version = "0.1.0"
description = "YouTube 影片下載、語音轉字幕、字幕翻譯"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2024.1.1",
    "mlx-whisper>=0.4.3",
    "deep-translator>=1.11.4",
    "anthropic>=0.100",
    "google-genai>=1.0",
    "opencc-python-reimplemented>=0.1.7",
"typer>=0.12.3",
    "rich>=13.0",
]

[project.scripts]
youtube-sub = "youtube_sub.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
